# telegram-bot-sandbox

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  pyproject.toml
app/: .env.example  config.py
app/utils/: logger.py
bot/: config.py
bot/utils/: logger.py
